# vela-recsys

./: .env.example  .gitignore  DEPLOY.md  README.md
backend/: Dockerfile  README.md  pyproject.toml  requirements-serve.txt  requirements.txt
backend/app/: main.py  service.py  tmdb.py
backend/recsys/: __init__.py  base.py  baselines.py  clustering.py  collaborative.py  config.py  content.py  data.py  evaluation.py  llm.py  matrix_factorization.py  metrics.py  semantic.py  stats.py
backend/scripts/: clustering_test.py  eda.py  eval_ml32m.py  eval_rigorous.py  precompute_posters.py  prepare_data.py  run_benchmark.py  smoke_api.py  smoke_api2.py  smoke_modern.py  tune.py
backend/tests/: test_metrics.py
brand/: BRAND.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/.claude/: launch.json
frontend/src/: App.tsx  index.css  types.d.ts  vite-env.d.ts
frontend/src/common/: index.ts
frontend/src/common/Error/: index.tsx
frontend/src/common/Footer/: index.tsx
frontend/src/common/Header/: HeaderNavItem.tsx  LabMenu.tsx  TasteButton.tsx  index.tsx
frontend/src/common/Loader/: index.tsx
frontend/src/constants/: index.ts
frontend/src/context/: themeContext.tsx
frontend/src/hooks/: useProfile.ts
frontend/src/services/: velaApi.ts
frontend/src/styles/: index.ts
frontend/src/utils/: config.ts  helper.ts  profile.ts
results/: benchmark_small_k10.csv  eda_ml-32m.md  eda_small.md  eval_ml32m.csv  eval_ml32m.md  eval_rigorous_small.csv  eval_rigorous_small.md
(+36 files in other folders)
