[project]
name = "vela-recsys"
version = "0.1.0"
description = "Vela — movie recommender engine (ESADE Recommender Systems individual project)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E402"]
